[OPIK-3298] [Docs] Add examples for prompt integration with Google ADK and extend tracing documentation
- Added new examples demonstrating prompt integration using `OpikTracer` in the Google ADK environment.
- Updated documentation for prompt management to explain the usage of prompts with third-party integrations via `opik_context`.
- Enhanced an ADK tracing section with a step-by-step example of creating, associating prompts, and tracking spans.

--- a/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
@@ -438,3 +438,9 @@ experiment_v2 = evaluate(
 ```
 
 This workflow allows you to systematically test and compare different prompt versions to identify the most effective one for your use case.
+
+## Using prompts in supported integrations
+
+Prompts can be used in all supported third-party integrations by attaching them to traces and spans through the [`opik_context` module](/docs/opik/prompt_engineering/prompt_management#adding-prompts-to-traces-and-spans).
+
+For instance, you can use prompts with the `Google ADK` integration, as shown in the [example here](/docs/opik/integrations/adk#promts-integration).
