[OPIK-3298] [Docs] Fixed typos

--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/adk.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/adk.mdx
@@ -594,9 +594,9 @@ opik_tracer = OpikTracer()
 opik_tracer.flush()
 ```
 
-## Promts integration
+## Prompts integration
 
-The `OpikTracer` can be used together with the [OPIK promts library](/docs/opik/prompt_engineering/prompt_management)
+The `OpikTracer` can be used together with the [OPIK prompts library](/docs/opik/prompt_engineering/prompt_management)
 to easily access your existing prompts or create new ones, and then associate them with traces or spans within an ADK agent flow.
 
 ```python
