--- a/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
@@ -443,4 +443,4 @@ This workflow allows you to systematically test and compare different prompt ver
 
 Prompts can be used in all supported third-party integrations by attaching them to traces and spans through the [`opik_context` module](/docs/opik/prompt_engineering/prompt_management#adding-prompts-to-traces-and-spans).
 
-For instance, you can use prompts with the `Google ADK` integration, as shown in the [example here](/docs/opik/integrations/adk#promts-integration).
+For instance, you can use prompts with the `Google ADK` integration, as shown in the [example here](/docs/opik/integrations/adk#prompts-integration).
