[OPIK-3298] [Docs] Fixed according to review comments

--- a/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
@@ -231,7 +231,7 @@ You can view the prompts associated with a trace or span in the Opik UI:
 Further details on using prompts from the Prompt library are provided in the following sections.
 
 
-## Using prompts in supported integrations
+### Using prompts in supported integrations
 
 Prompts can be used in all supported third-party integrations by attaching them to traces and spans through the [`opik_context` module](/docs/opik/prompt_engineering/prompt_management#adding-prompts-to-traces-and-spans).
 
