Fix broken link for feedback definitions

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/annotation_queues.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/annotation_queues.mdx
@@ -104,4 +104,4 @@ The SME interface provides:
 You can learn more about Opik's annotation and evaluation features in:
 
 1. [Evaluation overview](/evaluation/overview)
-2. [Feedback definitions](/evaluation/feedback_definitions)
+2. [Feedback definitions](../configuration/configuration/feedback_definitions)
