[OPIK-2898] [FE] Add Meaning Match LLM judge metric for automation rules

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/metrics/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/metrics/overview.mdx
@@ -58,6 +58,7 @@ Heuristic metrics are ideal when you need reproducible checks such as exact matc
 | G-Eval | Task-agnostic judge configurable with custom instructions | [G-Eval](/evaluation/metrics/g_eval) |
 | Hallucination | Detects unsupported or hallucinated claims using an LLM judge | [Hallucination](/evaluation/metrics/hallucination) |
 | LLM Juries Judge | Averages scores from multiple judge metrics for ensemble scoring | [LLM Juries](/evaluation/metrics/llm_juries) |
+| Meaning Match | Evaluates semantic equivalence between output and ground truth | [Meaning Match](/evaluation/metrics/meaning_match) |
 | Moderation | Flags safety or policy violations in assistant responses | [Moderation](/evaluation/metrics/moderation) |
 | Prompt Uncertainty Judge | Detects ambiguity in prompts that may confuse LLMs | [Prompt Diagnostics](/evaluation/metrics/prompt_diagnostics) |
 | QA Relevance Judge | Determines whether an answer directly addresses the user question | [QA Relevance](/evaluation/metrics/g_eval#qa-relevance-judge) |
