--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_metrics.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_metrics.mdx
@@ -42,8 +42,55 @@ objective = MultiMetricObjective(
 ```
 
 <Tip>
-  Weights do not need to sum to 1; choose numbers that highlight the most critical metric to your use case.
+  Weights do not need to sum to 1; choose numbers that highlight the most critical metric to your use case. Use negative weights to minimize a metric instead of maximizing it.
 </Tip>
+
+### Include cost and duration metrics
+
+You can optimize for efficiency alongside quality by including span-based metrics like cost and duration in your composite objective. These metrics require access to the `task_span` parameter:
+
+```python
+from opik_optimizer import MultiMetricObjective
+from opik.evaluation.metrics import AnswerRelevance
+from opik_optimizer.metrics import TotalSpanCost, SpanDuration
+
+# Metric that needs task_span
+def cost_in_cents(dataset_item, llm_output, task_span):
+    cost_metric = TotalSpanCost()
+    result = cost_metric.score(task_span=task_span)
+    return result.value * 100  # Convert to cents
+
+# Metric that needs task_span
+def duration_seconds(dataset_item, llm_output, task_span):
+    duration_metric = SpanDuration()
+    result = duration_metric.score(task_span=task_span)
+    return result.value
+
+# Regular metric without task_span
+def answer_relevance(dataset_item, llm_output):
+    metric = AnswerRelevance()
+    return metric.score(
+        context=[dataset_item["answer"]], 
+        output=llm_output, 
+        input=dataset_item["question"]
+    )
+
+# Combine quality, cost, and speed metrics
+# Use negative weights to minimize cost and duration
+objective = MultiMetricObjective(
+    metrics=[answer_relevance, cost_in_cents, duration_seconds],
+    weights=[1.0, -5, -0.3],  # Maximize quality, minimize cost (manually adjusted bigger weight since the cost values are small), minimize duration
+    name="quality_cost_speed",
+)
+```
+
+<Note>
+  Span-based metrics like `TotalSpanCost` and `SpanDuration` automatically receive the `task_span` parameter during evaluation, which contains execution information about the agent's run. Use negative weights to minimize metrics (cost, duration) rather than maximize them.
+</Note>
+
+<Note>
+  LLM task total cost and duration are not normalized values, we recommend adjusting their weights based on your baseline metrics and the importance you want them to have.
+</Note>
 
 ## Recommended presets
 
