--- a/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
@@ -124,7 +124,7 @@ evaluate_experiment(experiment_name="my-experiment", scoring_metrics=[hallucinat
 </Tip>
 
 <Note>
-  You can also compute experiment-level aggregate metrics when updating experiments using the `experiment_scores` parameter. 
+  You can also compute experiment-level aggregate metrics when updating experiments using the `experiment_scoring_functions` parameter. 
   Learn more about [experiment-level metrics](/evaluation/evaluate_your_llm#computing-experiment-level-metrics).
 </Note>
 
