--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/overview.mdx
@@ -166,6 +166,7 @@ Opik helps you easily log, visualize, and evaluate everything from raw LLM calls
   <Card title="Dify" href="/docs/opik/integrations/dify" />
   <Card title="Flowise" href="/docs/opik/integrations/flowise" />
   <Card title="Langflow" href="/docs/opik/integrations/langflow" />
+  <Card title="n8n" href="/docs/opik/integrations/n8n" />
   <Card title="OpenWebUI" href="/docs/opik/integrations/openwebui" />
 </CardGroup>
 
