[OPIK-3295] [DOCS] Update of documentation

--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/spring-ai.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/spring-ai.mdx
@@ -263,7 +263,7 @@ export OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:5173/api/v1/private/otel
 mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Dspring.devtools.restart.enabled=true"
 ```
 
-The application will start on **http://localhost:8085**
+The application will start on `http://localhost:8085`
 
 ## Testing the Demo Application using REST API
 
