[issue-3764] [P SDK] [FE] [BE] [Docs] Introduce experiment scoring functions (#3989)
* Hide experiment_scores columns in the single experiment table

* Add SDK support for experiment_scores

* Add SDK support for experiment_scores

* Add BE functionality

* Typescript autogenerated code

* Documentation and FE update

* Address PR comments

* Address PR comments

* Fix PR comments

* Address PR comments

* Fix merge conflicts

* Fix tests

* Fix failing tests

* Fix failing tests

* Fix UI colors and column names

* Refactor: Extract common score averaging logic to eliminate duplication

* Harmonize experiment scores sorting to use map access from CTE

- Add experiment_scores_agg LEFT JOIN to non-grouped queries
- Simplify SortingQueryBuilder to use coalesce(map[key]) instead of complex JSON extraction
- Remove special case handling for experiment_scores in null direction logic
- Addresses PR review comments about query harmonization

* Remove early return for empty test results in experiment scores

- Allow experiment score functions to handle empty test results
- Some functions may want to return baseline/default scores with no data
- Addresses PR review comment about preventing score function execution

* Add E2E test for experiment scores functionality

- Test verifies experiment scoring functions work end-to-end
- Validates experiment scores appear in evaluation result
- Validates experiment scores are retrievable via SDK API
- Uses compute_max_score function to test score aggregation
- Addresses PR review comment about E2E test coverage

* Enhance experiment score computation to handle empty test results gracefully

- Update condition to return empty list if either scoring functions or test results are absent
- Ensures robustness in score computation logic

* Add Python SDK E2E test for experiment scores

- Tests experiment_scoring_functions parameter in evaluate()
- Verifies experiment scores are computed and returned in result
- Validates scores are persiste

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/concepts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/concepts.mdx
@@ -73,6 +73,16 @@ Experiment items store the input, expected output, actual output and feedback sc
   <img src="/img/evaluation/experiment_items.png" />
 </Frame>
 
+### Experiment-Level Metrics
+
+In addition to per-item metrics, you can compute experiment-level aggregate metrics that are calculated across all test results. These experiment scores are displayed in the Opik UI alongside feedback scores and can be used for sorting and filtering experiments.
+
+Experiment scores are computed after all test results are collected using custom functions that take a list of test results and return aggregate metrics. Common use cases include computing maximum, minimum, or mean values across all test cases, or calculating custom statistics specific to your evaluation needs.
+
+<Tip>
+  Learn more about how to compute experiment-level metrics in the [Evaluate your LLM application](/evaluation/evaluate_your_llm#computing-experiment-level-metrics) guide.
+</Tip>
+
 ### Multi-Value Feedback Scores for Experiment Items
 
 The experiment interface supports multiple evaluators scoring the same experiment items. Each item can receive independent scores from different team members, with all ratings preserved and aggregated in the interface.
