--- a/apps/opik-documentation/documentation/fern/docs/evaluation/evaluate_prompt.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/evaluate_prompt.mdx
@@ -225,3 +225,8 @@ You can customize the model used by create a new model using the [`LiteLLMChatMo
 ## Next steps
 
 To evaluate complex LLM applications like RAG applications or agents, you can use the [`evaluate`](/evaluation/evaluate_your_llm) function.
+
+<Tip>
+  You can also compute experiment-level aggregate metrics when evaluating prompts using the `experiment_scoring_functions` parameter. 
+  Learn more about [experiment-level metrics](/evaluation/evaluate_your_llm#computing-experiment-level-metrics).
+</Tip>
