--- a/apps/opik-documentation/documentation/fern/docs/evaluation/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/overview.mdx
@@ -192,6 +192,14 @@ for metric_name, statistics in scores.aggregated_scores.items():
 
 You can use aggregated scores to compare the performance of different models or different versions of the same model.
 
+### Experiment-Level Metrics
+
+In addition to per-item metrics, you can compute experiment-level aggregate metrics that are calculated across all test results. These experiment scores are displayed in the Opik UI alongside feedback scores and can be used for sorting and filtering experiments.
+
+<Tip>
+  Learn more about computing experiment-level metrics in the [Evaluate your LLM application](/evaluation/evaluate_your_llm#computing-experiment-level-metrics) guide.
+</Tip>
+
 ## Learn more
 
 You can learn more about Opik's evaluation features in:
