docs: add cross-references to programmatic evaluation API
Add tips in the annotate_traces and evaluation overview pages pointing
to the new REST API documentation for triggering evaluation rules
programmatically.

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/overview.mdx
@@ -19,7 +19,9 @@ Answer Relevance, Context Precision/Recall and more. You can learn more about th
   If you are interested in evaluating your LLM application in production, please
   refer to the [Online evaluation guide](/production/rules). Online evaluation
   rules allow you to define LLM as a Judge metrics that will automatically score
-  all, or a subset, of your production traces.
+  all, or a subset, of your production traces. You can also [trigger evaluation
+  programmatically via the REST API](/production/rules#triggering-evaluation-rules-programmatically)
+  to evaluate specific traces on demand.
 </Tip>
 
 <Note>
