--- a/apps/opik-documentation/documentation/fern/docs/tracing/annotate_traces.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/annotate_traces.mdx
@@ -140,6 +140,10 @@ When you trigger manual evaluation:
 
 This gives you the flexibility to evaluate exactly what you need, when you need it, without waiting for the next sampled trace or modifying your online evaluation configuration.
 
+<Tip>
+  You can also trigger manual evaluation programmatically via the REST API. This is useful for integrating evaluation into custom workflows or pipelines. See [Triggering evaluation rules programmatically](/production/rules#triggering-evaluation-rules-programmatically) for details and code examples.
+</Tip>
+
 ## Next steps
 
 You can go one step further and:
