--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/overview.mdx
@@ -48,6 +48,7 @@ Opik helps you easily log, visualize, and evaluate everything from raw LLM calls
     href="/docs/opik/integrations/adk"
   />
   <Card title="Haystack" href="/docs/opik/integrations/haystack" />
+  <Card title="Harbor" href="/docs/opik/integrations/harbor" />
   <Card title="Instructor" href="/docs/opik/integrations/instructor" />
   <Card title="LangChain" href="/docs/opik/integrations/langchain" />
   <Card title="LangGraph" href="/docs/opik/integrations/langgraph" />
